test/files/pos/t11158/CharSeqJava.java

public interface CharSeqJava {
    int length();
}
