test/files/neg/t10260/IB.java
public interface IB {
    void foo(B a);
}
